--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
     "name": "autoact-chrome-extension",
     "private": true,
-    "version": "0.0.0",
-    "type": "module",
+    "version": "0.1.0",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc -b && vite build",
-        "lint": "eslint .",
-        "preview": "vite preview",
-        "format": "prettier --write .",
-        "format:check": "prettier --check ."
-    },
+    "build": "rollup -c",
+    "watch": "rollup -c -w"
+  },
     "dependencies": {
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-icons": "^5.4.0"
     },
     "devDependencies": {
-        "@crxjs/vite-plugin": "^2.0.0-beta.28",
         "@eslint/js": "^9.19.0",
         "@types/react": "^19.0.8",
         "@types/react-dom": "^19.0.3",
@@ -33,6 +27,43 @@
         "tailwindcss": "3",
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.22.0",
-        "vite": "~4.2.2"
+        "vite": "~4.2.2",
+
+        "@babel/core": "^7.25.7",
+        "@babel/preset-env": "^7.25.7",
+        "@babel/preset-react": "^7.25.7",
+        "@babel/preset-typescript": "^7.25.7",
+        "@rollup/plugin-babel": "^6.0.4",
+        "@rollup/plugin-commonjs": "^28.0.0",
+        "@rollup/plugin-json": "^6.1.0",
+        "@rollup/plugin-node-resolve": "^15.3.0",
+        "@rollup/plugin-replace": "^6.0.1",
+        "@rollup/plugin-typescript": "^12.1.0",
+        "@svgr/rollup": "^8.1.0",
+        "@svgr/webpack": "^8.1.0",
+        "@types/chroma-js": "^2.4.4",
+        "@types/chrome": "^0.0.266",
+
+        "axios": "^1.6.8",
+        "copy-webpack-plugin": "^12.0.2",
+        "css-loader": "^7.1.1",
+        "html-webpack-plugin": "^5.6.0",
+        "postcss-import": "^16.1.0",
+        "postcss-loader": "^8.1.1",
+        "react-countdown": "^2.3.5",
+        "react-router-dom": "^6.22.3",
+        "rollup": "^2.79.2",
+        "rollup-plugin-copy": "^3.5.0",
+        "rollup-plugin-node-polyfills": "^0.2.1",
+        "rollup-plugin-postcss": "^4.0.2",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-url": "^3.0.1",
+        "rollup-plugin-visualizer": "^5.12.0",
+        "svg-url-loader": "^8.0.0",
+        "ts-loader": "^9.5.1",
+        "ts-node": "^10.9.2",
+        "webpack": "^5.91.0",
+        "webpack-cli": "^5.1.4"
+      
     }
 }
