--- a/manifest.json
+++ b/manifest.json
@@ -8,5 +8,12 @@
             "js": ["src/content.tsx"],
             "matches": ["<all_urls>"]
         }
-    ]
+    ],
+    "side_panel": {
+        "default_path": "index.html"
+    },
+    "permissions": ["sidePanel"],
+    "background": {
+        "service_worker": "src/background.js"
+    }
 }
