--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "devDependencies": {
         "@crxjs/vite-plugin": "^2.0.0-beta.28",
         "@eslint/js": "^9.19.0",
+        "@types/chrome": "^0.0.304",
         "@types/react": "^19.0.8",
         "@types/react-dom": "^19.0.3",
         "@vitejs/plugin-react": "^4.3.4",
