--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,17 @@
     "name": "AutoAct",
     "version": "1.0.0",
     "description": "AutoAct Chrome Extension",
+    "background": {
+        "service_worker": "background.js"
+      },
+    "permissions": [
+        "sidePanel",
+        "tabs"
+    ],
+    "side_panel": {
+        "default_path": "app.html",
+        "default_title": "AutoAct"
+      },
     "content_scripts": [
         {
             "js": ["contentScript.js"],
