--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
     "side_panel": {
         "default_path": "index.html"
     },
-    "permissions": ["sidePanel"],
+    "permissions": ["sidePanel", "activeTab", "storage"],
     "background": {
         "service_worker": "src/background.js"
     }
