--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc -b && vite build",
+        "build": "npx tailwindcss -i ./src/index.css -o ./dist/index.css --minify && tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview",
         "format": "prettier --write .",
