fix: add svg images for typescript config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,8 @@
         "jsx": "react-jsx"
     },
     "include": [
-        "sidebar"
+        "sidebar/**/*",
+        "custom.d.ts",
+        "toolbar/**/*"
     ]
 }
