--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,11 @@
             "js": ["contentScript.js"],
             "matches": ["<all_urls>"]
         }
+    ],
+    "web_accessible_resources": [
+        {
+            "resources": ["*.css"],
+            "matches": ["<all_urls>"]
+        }
     ]
 }
