--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "background": {
         "service_worker": "background.js"
     },
-    "permissions": ["sidePanel", "tabs", "activeTab", "storage"],
+    "permissions": ["sidePanel", "tabs", "activeTab", "storage", "scripting"],
     "side_panel": {
         "default_path": "index.html",
         "default_title": "AutoAct"
@@ -14,13 +14,15 @@
     "content_scripts": [
         {
             "js": ["contentScript.js"],
-            "matches": ["<all_urls>"]
+            "matches": ["<all_urls>"],
+            "all_frames": true
         }
     ],
     "web_accessible_resources": [
         {
-            "resources": ["*.css"],
+            "resources": ["*.css", "*.js"],
             "matches": ["<all_urls>"]
         }
-    ]
+    ],
+    "host_permissions": ["<all_urls>"]
 }
