--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "background": {
         "service_worker": "background.js"
     },
-    "permissions": ["sidePanel", "tabs", "activeTab", "storage", "scripting"],
+    "permissions": ["sidePanel", "tabs", "activeTab", "storage", "scripting", "contextMenus"],
     "side_panel": {
         "default_path": "index.html",
         "default_title": "AutoAct"
